# simplecppcmake

./: CMakeLists.txt  HelloWorld  README.md  build.sh
src/: class001.cpp  log.cpp
src/include/: log.h
